<resources>
<!--    <string name="app_name">LoginAndSignup</string>-->
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Logo">Logo</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>
    <string name="Email">Email</string>
    <string name="ConfirmEmailAddress">Confirm Email Address</string>
    <string name="SignUp">Sign Up</string>
    <string name="registrationPage">Registration Page</string>
    <string name="app_name">课程表</string>
    <string name="lastWeek">上一周</string>
    <string name="nextWeek">下一周</string>
    <string name="back">返回</string>
    <string name="delCourse">删除课程</string>
</resources>
